# TomCentauroUDP

./: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  build-docker.bash  push-docker.bash  run-docker.bash
include/TomCentauroUDP/: rt_ipc.h
include/TomCentauroUDP/packet/: packet.hpp
include/tom_centauro_udp/communication/: SocketBase.h  TCPSocket.h  UDPSocket.h
include/tom_centauro_udp/packet/: packet.hpp  packet_ros_utils.hpp
launch/: centauro.rviz  centauro_collision_avoidance.launch  centauro_collision_avoidance_stack.yaml  centauro_contact_consistent_homing.launch
src/: centauro_udp_receiver.cpp  centauro_udp_sender.cpp  contact_homing.py  contact_homing_stack.yaml  ik_plugin.cpp  ik_plugin.h  recovery_motion.py  rrt_homing.py  rt_ipc.cpp  udp_client_ros.cpp  udp_client_velocity_ros.cpp  udp_dummy_client.cpp  udp_receiver.cpp  udp_server.cpp  udp_server.h  udp_server_plugin.cpp  udp_server_plugin.h  udp_server_ros.cpp  udp_test_sender.cpp
srdf/: centauro_dagana.srdf  centauro_dagana_virtual_frame_capsule.srdf
urdf/: centauro_dagana.urdf  centauro_dagana_virtual_frame_capsule.urdf
